# streamlit-mcp-client

./: README.md  main.py  mcp_client_basic.py  mcp_service.py  openai_service.py  pyproject.toml  requirements.txt  streamlit_basic.py  streamlit_connect_mcp_server.py  streamlit_mcp_client.py  streamlit_openai.py
api/: main.py  mcp_client.py
front/: __init__.py  chatbot.py  main.py
front/components/: chat_ui.py
front/config/: settings.py
front/services/: mcp_service.py  openai_service.py
front/ui/: components.py
